--- a/public/user/css/clean-blog.css
+++ b/public/user/css/clean-blog.css
@@ -194,7 +194,8 @@ header.masthead .site-heading {
   header.masthead .page-heading,
   header.masthead .post-heading,
   header.masthead .site-heading {
-    padding: 200px 0;
+    /*padding: 200px 0;*/
+    padding: 150px 0;
   }
 }
 
